--- a/.ebextensions/01_root_volume.config
+++ b/.ebextensions/01_root_volume.config
@@ -1,10 +1,6 @@
-Resources:
-  AWSEBLaunchConfiguration:
-    Type: AWS::AutoScaling::LaunchConfiguration
-    Properties:
-      BlockDeviceMappings:
-        - DeviceName: /dev/xvda
-          Ebs:
-            VolumeSize: 30  
-            VolumeType: gp3
+# .ebextensions/01_root_volume.config
+option_settings:
+  aws:autoscaling:launchconfiguration:
+    RootVolumeSize: 30   # GiB – change if you need more/less
+    RootVolumeType: gp3  # gp3 is cheaper and faster than gp2
 
